# currency/server/currency.go
@@ -4,22 +4,31 @@ import (
 	"context"
 
 	"github.com/hashicorp/go-hclog"
+	"github.com/nicholasjackson/building-microservices-youtube/currency/data"
 	protos "github.com/nicholasjackson/building-microservices-youtube/currency/protos/currency"
 )
 
 // Currency is a gRPC server it implements the methods defined by the CurrencyServer interface
 type Currency struct {
-	log hclog.Logger
+	log   hclog.Logger
+	rates *data.ExchangeRates
 }
 
 // NewCurrency creates a new Currency server
-func NewCurrency(l hclog.Logger) *Currency {
-	return &Currency{l}
+func NewCurrency(er *data.ExchangeRates, l hclog.Logger) *Currency {
+	return &Currency{rates: er, log: l}
 }
 
 // GetRate implements the CurrencyServer GetRate method and returns the currency exchange rate
 // for the two given currencies.
 func (c *Currency) GetRate(ctx context.Context, rr *protos.RateRequest) (*protos.RateResponse, error) {
 	c.log.Info("Handle request for GetRate", "base", rr.GetBase(), "dest", rr.GetDestination())
-	return &protos.RateResponse{Rate: 0.5}, nil
+
+	// get the rate
+	r, err := c.rates.GetRate(rr.GetBase().String(), rr.GetDestination().String())
+	if err != nil {
+		return nil, err
+	}
+
+	return &protos.RateResponse{Rate: r}, nil
 }
