# product-api/swagger.yaml
@@ -3,8 +3,8 @@ consumes:
 - application/json
 definitions:
   GenericError:
-    description: GenericError GenericError GenericError is a generic error message
-      returned by a server
+    description: GenericError GenericError GenericError GenericError is a generic
+      error message returned by a server
     properties:
       message:
         description: message
@@ -13,7 +13,8 @@ definitions:
     type: object
     x-go-package: github.com/nicholasjackson/building-microservices-youtube/product-api/sdk/models
   Product:
-    description: Product Product Product defines the structure for an API product
+    description: Product Product Product Product defines the structure for an API
+      product
     properties:
       description:
         description: the description for this poduct
@@ -49,8 +50,8 @@ definitions:
     type: object
     x-go-package: github.com/nicholasjackson/building-microservices-youtube/product-api/sdk/models
   ValidationError:
-    description: ValidationError ValidationError ValidationError is a collection of
-      validation error messages
+    description: ValidationError ValidationError ValidationError ValidationError is
+      a collection of validation error messages
     properties:
       messages:
         description: messages
@@ -69,6 +70,16 @@ paths:
     get:
       description: Return a list of products from the database
       operationId: listProducts
+      parameters:
+      - description: |-
+          Currency used when returning the price of the product
+          when not specified currency is returned in GBP.
+        in: query
+        name: Currency
+        type: string
+      - in: query
+        name: Base
+        type: string
       responses:
         "200":
           $ref: '#/responses/productsResponse'
@@ -141,6 +152,15 @@ paths:
       description: Return a list of products from the database
       operationId: listSingleProduct
       parameters:
+      - description: |-
+          Currency used when returning the price of the product
+          when not specified currency is returned in GBP.
+        in: query
+        name: Currency
+        type: string
+      - in: query
+        name: Base
+        type: string
       - description: The id of the product for which the operation relates
         format: int64
         in: path
